# example_solver

./: .gitignore  Cargo.toml  README.md
example_solver/: .env.example  Cargo.toml
example_solver/solver_fast/: .env.example  Cargo.toml
example_solver/solver_fast/src/: main.rs
example_solver/solver_fast/src/chains/: ethereum.rs  mod.rs  solana.rs
example_solver/solver_fast/src/routers/: mod.rs  paraswap.rs
example_solver/solver_fast/src/routers/jupiter/: field_instruction.rs  field_prioritization_fee.rs
example_solver/src/: main.rs
example_solver/src/chains/: ethereum.rs  mod.rs  solana.rs
example_solver/src/routers/: mod.rs  paraswap.rs
example_solver/src/routers/jupiter/: mod.rs
src/: main.rs
src/chains/: ethereum.rs  mod.rs  solana.rs
src/routers/: mod.rs
