[package]
name = "example_solver"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
ethers = { version = "2.0.14", default-features = true, features = [
    "ws",
    "abigen",
] }
hex = "0.4.3"
spl-associated-token-account = { version = "3.0.2", default-features = false, features = [
    "no-entrypoint",
] }
spl-token = { version = "3.2.0", default-features = false, features = [
    "no-entrypoint",
] }
solana-client = "1.8.3"
anchor-client = { version = "0.29.0" }
solana-sdk = "1.17.30"
anchor-spl = { version = "0.29.0" }
anchor-lang = { version = "0.29.0" }
anyhow = "1.0.32"
dotenv = "0.15.0"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
thiserror = "1.0.61"
bincode = "1"
num-bigint = "0.4.5"
num-traits = "0.2.19"
strum = "0.26.2"
strum_macros = "0.26.4"
secp256k1 = "0.27.0"
web3 = "0.19.0"
bridge-escrow = { git = "https://github.com/ComposableFi/emulated-light-client.git", branch = "fast-bridge" }
solana-ibc = { git = "https://github.com/ComposableFi/emulated-light-client.git", branch = "fast-bridge", features = ["cpi"] }
lib = { git = "https://github.com/ComposableFi/emulated-light-client.git", branch = "fast-bridge", features = ["solana-program"] }

[patch.crates-io]
# aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching both crates to unpin zeroize.
#
# For aes-gcm-siv we’re using the same revision Solana uses in
# an (as of now) unreleased commit, see
# https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
