[package]
name = "solver_fast"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bincode = "1"
reqwest = { version = "0.12.4", features = ["json"] }
spl-associated-token-account = { version = "3.0.2", default-features = false, features = ["no-entrypoint"] }
spl-token = "3.2.0"
thiserror = "1"
solana-client = "1.8.3"
tokio = { version = "1.18", features = ["full"] }
solana-sdk = "1.10.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
dotenv = "0.15"
ethers = { version = "2.0.14", default-features = true, features = ["ws","abigen"] }
hex-literal = "0.4.1"
hex = "0.4.3"
bs58 = "0.5.1"
num-bigint = "0.4.5"
num-traits = "0.2.19"
lazy_static = "1.4.0"
strum = "0.26.2"
strum_macros = "0.26.4"
tokio-tungstenite = "0.23.0"
futures = "0.3"
rand = "0.8.5"
chrono = "0.4.19"
secp256k1 = "0.27.0"
web3 = "0.19.0"


[patch.crates-io]
# aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
# which conflicts with other dependencies requiring zeroize ^1.5.
# We’re patching both crates to unpin zeroize.
#
# For aes-gcm-siv we’re using the same revision Solana uses in
# an (as of now) unreleased commit, see
# https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
#
# For curve25519-dalek we’re using commit from a PR, see
# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }




